...
                                message: authState.error.toString(),
                                context: context,
                                color: Colors.red,
                              );
                            } else {
                              showSnackBar(
                                message: 'Registered successfully',
                                context: context,
                              );
                            }
                                    },
                                    icon: const Icon(
                                      Icons.arrow_forward,
...
